--- a/blogs.html
+++ b/blogs.html
@@ -22,6 +22,10 @@
 
     <h3>Blogs</h3>
 
+    <div class="grid-x">
+       <div class="cell small-4">a</div>
+       <div class="cell small-8">b</div>
+    </div>
     <footer class="footer">
         © Aytonn Senna 2022
     </footer>
