--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
     </ul>
   </div>
   
-  <div class="card" style="width: 100%; height: 200px;">
+  <div class="card" style="width: 100%; height: 300px;">
     
     <img src="
-    https://media.istockphoto.com/photos/banner-with-copyspace-in-grey-color-of-laptop-and-female-hands-blue-picture-id1174411817?k=20&m=1174411817&s=612x612&w=0&h=_J8NFKjcwLTx4wzRf9GxL2e-WiHufihYlq3-qP8ED6k=
+    https://thumbs.dreamstime.com/b/laptop-header-image-good-morning-top-view-retro-breakfast-hero-old-wooden-desk-70599728.jpg
     ">
+    <!-- https://media.istockphoto.com/photos/banner-with-copyspace-in-grey-color-of-laptop-and-female-hands-blue-picture-id1174411817?k=20&m=1174411817&s=612x612&w=0&h=_J8NFKjcwLTx4wzRf9GxL2e-WiHufihYlq3-qP8ED6k= -->
     <div class="card-section">
       <h4>This is a card.</h4>
       <p>It has an easy to override visual style, and is appropriately subdued.</p>
@@ -34,7 +35,8 @@
   <div class="grid-container">
     <div class="grid-x grid-padding-x">
       <div class="large-12 cell">
-        <h4>The Dojo Blog</h4>
+        <h4>Featured posts</h4>
+        <hr>
       </div>
     </div>
   </div>
