--- a/about.html
+++ b/about.html
@@ -49,7 +49,12 @@
     </div>
 
     <footer class="footer">
-        © Aytonn Senna 2022
+        <p>
+            © Aytonn Senna 2022
+        </p>
+        <p>
+            Legal Stuff | Privacy Policy | Security
+        </p>
     </footer>
 
     <script src="js/vendor/jquery.js"></script>
