--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
  <div class="home">
   <div class="grid-x">
-    <div class="cell small-4">
+    <div class="cell small-12 medium-6 large-3">
       <div class="card blog-card">
         <img src="
         https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
@@ -51,7 +51,7 @@
         </div>
       </div>
     </div>
-    <div class="cell small-4">
+    <div class="cell small-12 medium-6 large-3">
       <div class="card blog-card">
         <img src="
         https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
@@ -66,7 +66,37 @@
       </div>
     </div>
 
-    <div class="cell small-4">
+    <div class="cell small-12 medium-6 large-3">
+      <div class="card blog-card">
+        <img src="
+        https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
+        ">
+        <div class="card-section">
+          <p>This is a simple card with an image.</p>
+        </div>
+      </div>
+    </div>
+    <div class="cell small-12 medium-6 large-3">
+      <div class="card blog-card">
+        <img src="
+        https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
+        ">
+        <div class="card-section">
+          <p>This is a simple card with an image.</p>
+        </div>
+      </div>
+    </div>
+    <div class="cell small-12 medium-6 large-3">
+      <div class="card blog-card">
+        <img src="
+        https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
+        ">
+        <div class="card-section">
+          <p>This is a simple card with an image.</p>
+        </div>
+      </div>
+    </div>
+    <div class="cell small-12 medium-6 large-3">
       <div class="card blog-card">
         <img src="
         https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
@@ -78,38 +108,6 @@
     </div>
 
 
-  </div>
-  <div class="grid-x">
-    <div class="cell small-4">
-      <div class="card blog-card">
-        <img src="
-        https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
-        ">
-        <div class="card-section">
-          <p>This is a simple card with an image.</p>
-        </div>
-      </div>
-    </div>
-    <div class="cell small-4">
-      <div class="card blog-card">
-        <img src="
-        https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
-        ">
-        <div class="card-section">
-          <p>This is a simple card with an image.</p>
-        </div>
-      </div>
-    </div>
-    <div class="cell small-4">
-      <div class="card blog-card">
-        <img src="
-        https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
-        ">
-        <div class="card-section">
-          <p>This is a simple card with an image.</p>
-        </div>
-      </div>
-    </div>
   </div>
  </div>
 
