--- a/blogs.html
+++ b/blogs.html
@@ -22,16 +22,29 @@
 
     <div class="grid-container">
         <div class="grid-x grid-padding-x">
-            <div class="large-12 cell"><br>
-                <h5>Blogs</h5>
+            <div class="large-12 cell"> <br>
+                <div class="grid-x">
+                    <div class="cell small-12 medium-8 large-8">
+                        <h5>Blogs</h5>
+                    </div>
+                    <div class="cell small-12 medium-4 large-4 search">
+                        <ul class="menu">
+                            <li><input type="search" placeholder="Search"></li>
+                            <li><button type="button" class="button">Search</button></li>
+                        </ul>
+                    </div>
+                </div>
                 <hr>
             </div>
+
         </div>
     </div>
 
+
     <div class="home">
-        <div class="grid-x">
-            <div class="cell small-12 medium-6 large-3">
+        <div class="grid-x cards">
+           
+            <div class="cell cell-card small-12 medium-6 large-3">
                 <div class="card blog-card">
                     <img src="
               https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
@@ -46,101 +59,131 @@
                     </div>
                 </div>
             </div>
-            <div class="cell small-12 medium-6 large-3">
+            <div class="cell cell-card small-12 medium-6 large-3">
                 <div class="card blog-card">
-                    <img src="
-              https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
-              ">
-                    <div class="card-section">
-                        <h5>Million: Build apps with JSX faster than React and Preact</h5>
-                        <p>
-                            Million, like Preact, solves the problem of large React bundles and a heavyweight virtual
-                            DOM but adds
-                            compilation for...
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="cell small-12 medium-6 large-3">
-                <div class="card blog-card">
-                    <img src="
-              https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
-              ">
-                    <div class="card-section">
-                        <p>This is a simple card with an image.A</p>
-                    </div>
-                </div>
-            </div>
-            <div class="cell small-12 medium-6 large-3">
-                <div class="card blog-card">
-                    <img src="
+                  <img src="
                   https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
                   ">
-                    <div class="card-section">
-                        <p>This is a simple card with an image.</p>
-                    </div>
+                  <div class="card-section">
+                    <h5>Million: Build apps with JSX faster than React and Preact</h5>
+                    <p>
+                      Million, like Preact, solves the problem of large React bundles and a heavyweight virtual DOM but adds
+                      compilation for...
+                    </p>
+                  </div>
                 </div>
-            </div>
-            <div class="cell small-12 medium-6 large-3">
+              </div>
+              <div class="cell cell-card small-12 medium-6 large-3">
                 <div class="card blog-card">
-                    <img src="
+                  <img src="
                   https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
                   ">
-                    <div class="card-section">
-                        <p>This is a simple card with an image.</p>
-                    </div>
+                  <div class="card-section">
+                    <p>This is a simple card with an image.</p>
+                  </div>
                 </div>
-            </div>
-            <div class="cell small-12 medium-6 large-3">
+              </div>
+              <div class="cell cell-card small-12 medium-6 large-3">
                 <div class="card blog-card">
-                    <img src="
+                  <img src="
                   https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
                   ">
-                    <div class="card-section">
-                        <p>This is a simple card with an image.</p>
-                    </div>
+                  <div class="card-section">
+                    <p>This is a simple card with an image.</p>
+                  </div>
                 </div>
-            </div>
-            <div class="cell small-12 medium-6 large-3">
+              </div>
+              <div class="cell cell-card small-12 medium-6 large-3">
                 <div class="card blog-card">
-                    <img src="
+                  <img src="
                   https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
                   ">
-                    <div class="card-section">
-                        <p>This is a simple card with an image.</p>
-                    </div>
+                  <div class="card-section">
+                    <p>This is a simple card with an image.</p>
+                  </div>
                 </div>
-            </div>
-            <div class="cell small-12 medium-6 large-3">
+              </div>
+              <div class="cell cell-card small-12 medium-6 large-3">
                 <div class="card blog-card">
-                    <img src="
+                  <img src="
                   https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
                   ">
-                    <div class="card-section">
-                        <p>This is a simple card with an image.</p>
-                    </div>
+                  <div class="card-section">
+                    <p>This is a simple card with an image.</p>
+                  </div>
                 </div>
-            </div>
-            <div class="cell small-12 medium-6 large-3">
+              </div>
+              <div class="cell cell-card small-12 medium-6 large-3">
                 <div class="card blog-card">
-                    <img src="
+                  <img src="
                   https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
                   ">
-                    <div class="card-section">
-                        <p>This is a simple card with an image.</p>
-                    </div>
+                  <div class="card-section">
+                    <p>This is a simple card with an image.</p>
+                  </div>
                 </div>
-            </div>
-            <div class="cell small-12 medium-6 large-3">
+              </div>
+              <div class="cell cell-card small-12 medium-6 large-3">
                 <div class="card blog-card">
-                    <img src="
+                  <img src="
                   https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
                   ">
-                    <div class="card-section">
-                        <p>This is a simple card with an image.</p>
-                    </div>
+                  <div class="card-section">
+                    <p>This is a simple card with an image.</p>
+                  </div>
                 </div>
-            </div>
+              </div>
+              <div class="cell cell-card small-12 medium-6 large-3">
+                <div class="card blog-card">
+                  <img src="
+                  https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
+                  ">
+                  <div class="card-section">
+                    <p>This is a simple card with an image.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="cell cell-card small-12 medium-6 large-3">
+                <div class="card blog-card">
+                  <img src="
+                  https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
+                  ">
+                  <div class="card-section">
+                    <p>This is a simple card with an image.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="cell cell-card small-12 medium-6 large-3">
+                <div class="card blog-card">
+                  <img src="
+                  https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
+                  ">
+                  <div class="card-section">
+                    <p>This is a simple card with an image.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="cell cell-card small-12 medium-6 large-3">
+                <div class="card blog-card">
+                  <img src="
+                  https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
+                  ">
+                  <div class="card-section">
+                    <p>This is a simple card with an image.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="cell cell-card small-12 medium-6 large-3">
+                <div class="card blog-card">
+                  <img src="
+                  https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
+                  ">
+                  <div class="card-section">
+                    <p>This is a simple card with an image.</p>
+                  </div>
+                </div>
+              </div>
+            
 
 
         </div>
