--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
  <div class="home">
   <div class="grid-x">
-    <div class="cell small-12 medium-6 large-3">
+    <div class="cell cell-card small-12 medium-6 large-3">
       <div class="card blog-card">
         <img src="
         https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
@@ -51,7 +51,7 @@
         </div>
       </div>
     </div>
-    <div class="cell small-12 medium-6 large-3">
+    <div class="cell cell-card small-12 medium-6 large-3">
       <div class="card blog-card">
         <img src="
         https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div class="cell small-12 medium-6 large-3">
+    <div class="cell cell-card small-12 medium-6 large-3">
       <div class="card blog-card">
         <img src="
         https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
@@ -76,7 +76,7 @@
         </div>
       </div>
     </div>
-    <div class="cell small-12 medium-6 large-3">
+    <div class="cell cell-card small-12 medium-6 large-3">
       <div class="card blog-card">
         <img src="
         https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
@@ -86,7 +86,7 @@
         </div>
       </div>
     </div>
-    <div class="cell small-12 medium-6 large-3">
+    <div class="cell cell-card small-12 medium-6 large-3">
       <div class="card blog-card">
         <img src="
         https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
@@ -96,7 +96,7 @@
         </div>
       </div>
     </div>
-    <div class="cell small-12 medium-6 large-3">
+    <div class="cell cell-card small-12 medium-6 large-3">
       <div class="card blog-card">
         <img src="
         https://media.istockphoto.com/photos/increasing-connections-picture-id653137702?k=20&m=653137702&s=170667a&w=0&h=964eOYHE3zkSevZH7YUFCfeDVJSycLHXXF-DVTz8aHw=
