--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="" class="active">About</a></li>
             <li><a href="./blogs.html">Blogs</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </div>
     
@@ -50,7 +50,7 @@
 
     <footer class="footer">
         <p>
-            © Aytonn Senna 2022
+            © Ayrton Senna 2022
         </p>
         <p>
             Legal Stuff | Privacy Policy | Security
