--- a/blogs.html
+++ b/blogs.html
@@ -16,7 +16,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="" class="active">Blogs</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </div>
 
@@ -190,7 +190,7 @@
     </div>
     <footer class="footer">
         <p>
-            © Aytonn Senna 2022
+            © Ayrton Senna 2022
         </p>
         <p>
             Legal Stuff | Privacy Policy | Security
