--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href="" class="active">Home</a></li>
       <li><a href="./about.html">About</a></li>
       <li><a href="./blogs.html">Blogs</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="./contact.html">Contact</a></li>
     </ul>
   </div>
 
@@ -113,7 +113,7 @@
 
   <footer class="footer">
     <p>
-      © Aytonn Senna 2022
+      © Ayrton Senna 2022
     </p>
     <p>
       Legal Stuff | Privacy Policy | Security
